<resources>
    <string name="app_name">LearnDemo</string>

    <string name="navigation_drawer_open" translatable="false">close drawer</string>
    <string name="navigation_drawer_close" translatable="false">open drawer</string>
    <string name="action_settings">设置</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登陆或者注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"需要提供电子邮件联系人权限完成."</string>

    <!--资源来自妹知-->
    <string name="action_about">关于</string>
    <string name="load_fail">网络被外星人切断，稍后再试吧</string>
    <string name="activity_news_detail">知乎日报详情</string>
    <string name="share_title" translatable="false">shared_title</string>
    <string name="shared_img" translatable="false">shared_img</string>
    <string name="activity_settings">设置</string>
    <string name="nva_knowledge">知识</string>
    <string name="nav_beauty">美图</string>
    <string name="nav_xxoo" translatable="false">XXOO</string>
    <string name="app">应用</string>
    <string name="nav_share">分享</string>
    <string name="nav_setting">设置</string>
    <string name="activity_detail">详情页</string>
    <string name="fresh_news">新鲜事</string>
    <string name="zhihu_news">知乎日報</string>
    <string name="loading">努力加载中…</string>
    <string name="my_email" translatable="false">danteandroi@gmail.com</string>
    <string name="contact_me">联系我</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="set_current_cache">当前缓存为 </string>
    <string name="set_check_version">检查更新</string>
    <string name="set_feedback">应用反馈</string>
    <string name="set_post_feedback">提建议或反馈bug</string>
    <string name="share_to">分享到</string>
    <string name="menu_share">分享</string>
    <string name="version">版本 </string>
    <string name="about_me">关于作者</string>
    <string name="about_me_description">我是一个热爱Google和Android的开发者，如果你有好的idea或建议，不要犹豫，发送邮件跟我交流吧~</string>
    <string name="license">免责声明</string>
    <string name="license_description">本APP接口，资源全部来源于网络，如有侵权请告知</string>
    <string name="column_not_available">栏目未完成，请更新或联系作者 :D</string>
    <string name="clear_cache_success">缓存已清理</string>
    <string name="clear_cache_failed">缓存删除失败</string>
    <string name="original_splash">欢迎页</string>
    <string name="set_original_splash">打开每次进去都会出现欢迎页面</string>
    <string name="title_welcome">运营闪屏</string>
    <string name="set_welcome">默认，每次进入都会出现，关闭则不出现</string>
    <string name="share_app_description">这个Android项目很不错 https://github.com/DanteAndroid/Knowledge/</string>
    <string name="share_app">分享应用</string>
    <string name="tips">贴士</string>
    <string name="tips_content">浏览到下方时，点击标题栏可以快速返回顶部</string>

    <string name="hottest">今日热闻</string>
    <string name="nav_secret_mode" translatable="false">XXOO</string>
    <string name="secret_mode_opened">隐藏模式已打开，我们一起嘿嘿嘿~</string>
    <string name="secret_mode_closed">隐藏模式已关闭。</string>
    <string name="close_app">关闭应用</string>
    <string name="can_not_find_version_name">无法识别版本号</string>
    <string name="save_img_failed">无法保存图片</string>
    <string name="save_img_success">妹子已保存在：</string>
    <string name="view_img_hint">向下拉图片退出浏览；长按图片可以保存到手机~</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="save_img">保存</string>
    <string name="leave_app">真的要离开人家了吗？</string>

    <string name="browse_picture_hint">浏览图片时，您可以长按以分享/保存该图片.</string>
    <string name="hint">提示</string>
    <string name="ok">知道啦</string>
    <string name="start_download_update">检测到新版，开始下载…</string>
    <string name="email_not_install">您的手机没有安装邮件app。</string>


    <string name="simple_view_behavior">com.colorchen.net.view.SimpleViewBehavior</string>
    <string name="translate_up_down_behavior">com.colorchen.net.view.TranslateUpDownBehavior</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_bai_du_earth">百度地图</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_baiduearthactivity_list">BaiDuEarthActivity</string>
    <string name="title_baiduearthactivity_detail">BaiDuEarthActivity Detail</string>
</resources>
